add api-key registration on first load

--- a/default-settings.json
+++ b/default-settings.json
@@ -1,5 +1,6 @@
 {
   "is_celsius": false,
   "data_field": "hourly",
-  "twenty_four_hours": false
+  "twenty_four_hours": false,
+  "forecast_api_key": null
 }
